[package]
name = "libra-wallet-rust"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false, features = ["serve","tera_templates"]}
hex = "0.3"
rand = "0.6.5"
rand_chacha = "0.1.1"
rand_core = "0.4.0"
libra_wallet = { git = "https://github.com/libra/libra"}
libra_client = { git = "https://github.com/libra/libra", package = "client"}
