[package]
name = "libra-wallet-rust"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false, features = ["serve","tera_templates"]}
log = "0.4.7"
libra_wallet = { git = "https://github.com/libra/libra"}
libra_client = { git = "https://github.com/libra/libra", package = "client"}
